created base database

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots/'
-        }
+//        maven {
+//            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+//        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.+'
-        classpath 'com.squareup.gradle:gradle-android-test-plugin:0.9.1-SNAPSHOT'
-        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
+//        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
     }
 }
 
@@ -20,7 +19,7 @@ allprojects {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'robolectric'
+//apply plugin: 'robolectric'
 
 android {
     compileSdkVersion 20
@@ -52,18 +51,21 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'org.simpleframework:simple-xml:2.7.1'
+    compile('org.simpleframework:simple-xml:2.7.1') {
+        exclude group: 'stax', module: 'stax-api'
+        exclude group: 'xpp3', module: 'xpp3'
+    }
     compile 'commons-io:commons-io:2.4'
-    androidTestCompile 'junit:junit:4.10'
-    androidTestCompile 'org.robolectric:robolectric:2.3+'
-    androidTestCompile 'com.squareup:fest-android:1.0.+'
+//    androidTestCompile 'junit:junit:4.10'
+//    androidTestCompile 'org.robolectric:robolectric:2.3+'
+//    androidTestCompile 'com.squareup:fest-android:1.0.+'
 }
 
-robolectric {
-    // configure the set of classes for JUnit tests
-    include '**/*Test.class'
-    exclude '**/espresso/**/*.class'
-
-    // configure max heap size of the test JVM
-    maxHeapSize = "2048m"
-}
+//robolectric {
+//    // configure the set of classes for JUnit tests
+//    include '**/*Test.class'
+//    exclude '**/espresso/**/*.class'
+//
+//    // configure max heap size of the test JVM
+//    maxHeapSize = "2048m"
+//}
