added async data loading and saving

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,11 @@
 buildscript {
     repositories {
         mavenCentral()
-//        maven {
-//            url 'https://oss.sonatype.org/content/repositories/snapshots/'
-//        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.+'
-//        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
+        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
     }
 }
 
@@ -19,7 +16,7 @@ allprojects {
 }
 
 apply plugin: 'com.android.application'
-//apply plugin: 'robolectric'
+apply plugin: 'robolectric'
 
 android {
     compileSdkVersion 20
@@ -56,16 +53,18 @@ dependencies {
         exclude group: 'xpp3', module: 'xpp3'
     }
     compile 'commons-io:commons-io:2.4'
-//    androidTestCompile 'junit:junit:4.10'
-//    androidTestCompile 'org.robolectric:robolectric:2.3+'
-//    androidTestCompile 'com.squareup:fest-android:1.0.+'
+    compile 'com.android.support:support-v4:20.0.0'
+
+    androidTestCompile 'junit:junit:4.10'
+    androidTestCompile 'org.robolectric:robolectric:2.3+'
+    androidTestCompile 'com.squareup:fest-android:1.0.+'
 }
 
-//robolectric {
-//    // configure the set of classes for JUnit tests
-//    include '**/*Test.class'
-//    exclude '**/espresso/**/*.class'
-//
-//    // configure max heap size of the test JVM
-//    maxHeapSize = "2048m"
-//}
+robolectric {
+    // configure the set of classes for JUnit tests
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+
+    // configure max heap size of the test JVM
+    maxHeapSize = "2048m"
+}
