--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,11 +28,15 @@
         </activity>
         <activity
             android:name=".ui.DetailActivity"
-            android:label="Weather Details" />
+            android:label="Weather Details"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.ble.DevicesActivity"
-            android:label="Bluetooth LE Devices" />
-        <activity android:name=".ui.ble.DeviceDetailsActivity" />
+            android:label="Bluetooth LE Devices"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.ble.DeviceDetailsActivity"
+            android:screenOrientation="portrait" />
 
         <service android:name=".network.WeatherService" />
     </application>
